# probrain-grimorio-backend-devops

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/probrain_grimorio/: auth.py  cache.py  controller.py  models.py  observability.py  repository.py  seed.py  service.py
tests/: test_grimorio.py
